<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Texas Intramurals</string>
    <string name="version_name">v1.0.2</string>

    <!-- navdrawer -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- actionbar actions -->
    <string name="action_settings">Settings</string>
    <string name="action_follow">Follow</string>
    <string name="action_unfollow">Unfollow</string>

    <!-- Activity names -->
    <string name="title_activity_view_league">ViewLeagueActivity</string>
    <string name="title_activity_follow_new_league">FollowNewLeagueActivity</string>
    <string name="title_activity_display_division">DisplayDivisionActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_license">Open source licenses</string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- main activity -->
    <string name="try_again">Try again</string>
    <string name="no_leagues_followed">Looks like you aren\'t following any\nleagues yet!</string>
    <string name="follow_league">Follow a league</string>
    <string name="event_error">Could not fetch events.</string>
    <string name="league_error">Could not fetch leagues.</string>

    <!-- FollowNewLeagueActivity -->
    <string name="star_content_desc">Follow/unfollow league</string>

    <!-- ViewLeagueActivity -->
    <string name="no_schedule">No games scheduled yet.</string>
    <string name="no_standings">This league doesn\'t have a\nstandings table.</string>
    <string name="view_league_error">Could not fetch league.\nPlease try again later.</string>

    <!-- preferences -->
    <string name="pref_category_privacy">Privacy</string>
    <string name="pref_enable_acra">Auto-send crash reports</string>
    <string name="pref_category_about">Developer</string>
    <string name="pref_category_about_licenses">Open source licenses</string>
    <string name="pref_category_about_version">Version</string>

    <!-- Acra -->
    <string name="crash_toast_text">Something went wrong! We\'ve filed a crash report for you and will get to it as soon as we can.</string>
    <string name="acra_enable">acra.enable</string>


</resources>
